feat: started DbManager and implemented file loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "skipLibCheck": true,
         "baseUrl": "./src",
         "paths": {
-            "@/*": ["*.ts"]
+            "@/*": ["*.ts"],
+            "@db": ["services/db/db.ts"],
         },
         "outDir": "./dist"
     },
