--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.8",
+    "@types/pg-pool": "^2.0.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg-pool": "^3.7.1",
+    "toml": "^3.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
