feat: implemented session component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "paths": {
             "@/*": ["*.ts"],
             "@db/*": ["services/db/*.ts"],
+            "@session/*": ["services/session/*.ts"],
         },
         "outDir": "./dist"
     },
