--- a/src/config/db/model.yml
+++ b/src/config/db/model.yml
@@ -1,7 +1,9 @@
 queries:
-  create_database: |
-    CREATE DATABASE my_database;
-  create_user_table: |
+  drop_tables: |
+    DROP TABLE IF EXISTS users CASCADE;
+    DROP TABLE IF EXISTS posts CASCADE;
+    
+  user_table: |
     CREATE TABLE users (
       id SERIAL PRIMARY KEY,
       username VARCHAR(50) UNIQUE NOT NULL,
@@ -9,3 +11,13 @@ queries:
       password VARCHAR(100) NOT NULL,
       created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
     );
+
+  post_table: |
+    CREATE TABLE posts (
+      id SERIAL PRIMARY KEY,
+      title VARCHAR(100) NOT NULL,
+      content TEXT NOT NULL,
+      user_id INT REFERENCES users(id) ON DELETE CASCADE,
+      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+  
