--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.12.1",
     "pg": "^8.13.3",
     "pg-pool": "^3.7.1",
     "toml": "^3.0.0",
